k8s/base/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservicios-web-imagenes
  labels: { app: auth-service }
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: auth-service
  type: ClusterIP
